// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Category list correctly 1`] = `
<div
  className="categories"
  id="categories"
>
  <div
    className="row"
  >
    <div
      className="cat-center cat-divide"
    >
      <form
        onSubmit={[Function]}
      >
        <input
          className="cat-input"
          name="newCategory"
          placeholder="New Category"
          size="10"
          type="text"
        />
        <div
          className="btn-cat-group  btn-center"
        >
          <button
            className="button"
            type="submit"
          >
            New
          </button>
          <button
            className="button"
            onClick={[Function]}
            type="reset"
          >
            Reset
          </button>
        </div>
      </form>
    </div>
    <div
      className="row cat-header cat-center"
    >
      <span
        className="sort-icon"
        id="clickableSortArrow"
        onClick={[Function]}
      >
        <i
          className="fas fa-sort"
        />
      </span>
      <span>
        Categories
      </span>
    </div>
  </div>
  <div
    className="row"
  >
    <ul
      className="ul-no-bullet"
    >
      <li
        key="1"
      >
        <button
          className="btn-cat delete-icon"
          id={1}
          name="React"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="fa fa-times"
          />
        </button>
        <Link
          className="link"
          replace={false}
          to="/category/React"
        >
          React
        </Link>
      </li>
      <li
        key="2"
      >
        <button
          className="btn-cat delete-icon"
          id={2}
          name="JavaScript"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="fa fa-times"
          />
        </button>
        <Link
          className="link"
          replace={false}
          to="/category/JavaScript"
        >
          JavaScript
        </Link>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render Category list with empty message 1`] = `
<div
  className="categories"
  id="categories"
>
  <div
    className="row"
  >
    <div
      className="cat-center cat-divide"
    >
      <form
        onSubmit={[Function]}
      >
        <input
          className="cat-input"
          name="newCategory"
          placeholder="New Category"
          size="10"
          type="text"
        />
        <div
          className="btn-cat-group  btn-center"
        >
          <button
            className="button"
            type="submit"
          >
            New
          </button>
          <button
            className="button"
            onClick={[Function]}
            type="reset"
          >
            Reset
          </button>
        </div>
      </form>
      Please enter a name for your new category
    </div>
    <div
      className="row cat-header cat-center"
    >
      <span
        className="sort-icon"
        id="clickableSortArrow"
        onClick={[Function]}
      >
        <i
          className="fas fa-sort"
        />
      </span>
      <span>
        Categories
      </span>
    </div>
  </div>
  <div
    className="row"
  >
    <ul
      className="ul-no-bullet"
    />
  </div>
</div>
`;

exports[`should render sort-arrow with 3 or more categories 1`] = `
<div
  className="categories"
  id="categories"
>
  <div
    className="row"
  >
    <div
      className="cat-center cat-divide"
    >
      <form
        onSubmit={[Function]}
      >
        <input
          className="cat-input"
          name="newCategory"
          placeholder="New Category"
          size="10"
          type="text"
        />
        <div
          className="btn-cat-group  btn-center"
        >
          <button
            className="button"
            type="submit"
          >
            New
          </button>
          <button
            className="button"
            onClick={[Function]}
            type="reset"
          >
            Reset
          </button>
        </div>
      </form>
    </div>
    <div
      className="row cat-header cat-center"
    >
      <span
        className="sort-icon"
        id="clickableSortArrow"
        onClick={[Function]}
      >
        <i
          className="fas fa-sort"
        />
      </span>
      <span>
        Categories
      </span>
    </div>
  </div>
  <div
    className="row"
  >
    <ul
      className="ul-no-bullet"
    >
      <li
        key="1"
      >
        <button
          className="btn-cat delete-icon"
          id={1}
          name="React"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="fa fa-times"
          />
        </button>
        <Link
          className="link"
          replace={false}
          to="/category/React"
        >
          React
        </Link>
      </li>
      <li
        key="2"
      >
        <button
          className="btn-cat delete-icon"
          id={2}
          name="JavaScript"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="fa fa-times"
          />
        </button>
        <Link
          className="link"
          replace={false}
          to="/category/JavaScript"
        >
          JavaScript
        </Link>
      </li>
      <li
        key="2"
      >
        <button
          className="btn-cat delete-icon"
          id={2}
          name="CSS"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="fa fa-times"
          />
        </button>
        <Link
          className="link"
          replace={false}
          to="/category/CSS"
        >
          CSS
        </Link>
      </li>
    </ul>
  </div>
</div>
`;
